--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "rabbit:service": "node dist/rabbit.service.js",
     "kafka:api": "node dist/kafka.api.js",
     "kafka:service": "node dist/kafka.service.js",
+    "runner": "kn-runner --instances cpu ./dist/services ./dist/gateway",
+    "gateway": "kn-runner ./dist/gateway",
+    "service": "kn-runner ./dist/services",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -27,6 +30,7 @@
   "dependencies": {
     "@willsofts/will-api": "^1.0.13",
     "@willsofts/will-db": "^1.0.52",
+    "@willsofts/will-run": "^1.0.13",
     "@willsofts/will-sql": "^1.0.31",
     "amqplib": "^0.10.4",
     "ioredis": "^5.4.1",
